--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,14 +2,12 @@
   <h2>League of Legends Stats</h2>
 </div>
 
-
-<div class="container">
-  <highcharts-chart
-  [Highcharts]="Highcharts"
-  [constructorType]="chartType"
-  [options]="chartOptions"
-  style="width: 100%; height: 400px; display: block"
-  >
-  </highcharts-chart>
-
+<div class="container mb-5">
+  <canvas  style="display: block"
+           baseChart [chartType]="chartType"
+           [datasets]="chartData"
+           [labels]="chartLabels"
+           [legend]="true"
+  *ngIf="isChartReady">
+  </canvas>
 </div>
