--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,6 +8,6 @@
            [datasets]="chartData"
            [labels]="chartLabels"
            [legend]="true"
-  *ngIf="isChartReady">
+  *ngIf =  isChartReady>
   </canvas>
 </div>
