--- a/src/app/league-bar-chart/league-bar-chart.component.html
+++ b/src/app/league-bar-chart/league-bar-chart.component.html
@@ -10,5 +10,5 @@
 
 
 <div>
-  <button (click)="setData()">Click for Data</button>
+  <button (click)="setChartData()">Click for Data</button>
 </div>
