--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="jumbotron ml-2 mr-2 mt-2">
-  <h2>League of Legends Stats</h2>
-  <h3>{{userName}}</h3>
-</div>
+<!--<div class="jumbotron ml-2 mr-2 mt-2">-->
+<!--  <h2>League of Legends Stats</h2>-->
+<!--  <h3>{{userName}}</h3>-->
+<!--</div>-->
 
 <app-league-bar-chart></app-league-bar-chart>
