--- a/src/app/league-bar-chart/league-bar-chart.component.html
+++ b/src/app/league-bar-chart/league-bar-chart.component.html
@@ -1,4 +1,4 @@
-<div style="display: block;" *ngIf="isChartReady">
+<div style="display: block;" *ngIf="isChartReady" class="graphChartSettings">
   <canvas baseChart
     [datasets]="barChartData"
     [labels]="barChartLabels"
@@ -9,6 +9,6 @@
 </div>
 
 
-<div>
+<div class="graphChartSettings">
   <button (click)="setChartData()">Click for Data</button>
 </div>
