changes to routes

--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -4,7 +4,7 @@
 
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" routerLink="/stats">Bar Chart</a>
+        <a class="nav-link active" aria-current="page" routerLink="/bar-chart">Bar Chart</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" routerLink="/stacked-bar-chart">Stacked Bar Chart</a>
